fixed styles for source and page numbers so they are visible
git-svn-id: https://svn.sixfeetup.com/svn/private/sixfeetup/resources/presentation_themes/sixfeetup_landslide@36990 7abc7aa1-7e52-db11-9331-00508bd72530

--- a/css/screen.css
+++ b/css/screen.css
@@ -429,12 +429,14 @@ aside {
     bottom: 6px;
     left: 10px;
     text-indent: 10px;
+    color: #ffffff;
   }
   aside.page_number {
     position: absolute;
     bottom: 6px;
     right: 10px;
     text-indent: 10px;
+    color: #ffffff;
   }
 
 p.notes {
